2005-11-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_plot do_key_sample)
	src/graph3d.c (key_sample_line key_sample_point key_sample_point_pm3d):
	Clip key to canvas unless TERM_CAN_CLIP flag is set.

	* src/set.c (load_tic_user): Allow string variables and string functions
	in 'set {xyz}tics ( FOO <foo>, BAR(x) x, "string"."exp" <place> )

2005-11-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/tgif.trm (TGIF_init): Message "Creator: gnuplot %s patchlevel %s"
	instead of $Header: /home/mojca/cron/mojca/github/cvs/gnuplot2/gnuplot/ChangeLog,v 1.1756 2005/11/25 19:13:28 sfeam Exp $ in output file header.

2005-11-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/gadgets.c (clip_point) src/term.c (do_arrow): If terminal
	flag TERM_CAN_CLIP is set, then set canvas clipping description 
	to NULL.

	* src/term_api.h src/term.c: Export on_page() so that it can be
	used for clipping tests by other core modules.

	* src/gadgets.c (write_label): If a label has an associated point,
	clip the point using the same test as were used for the label itself.

2005-11-24  Juergen Wieferink  <wieferink@freenet.de>

	* src/util.c (parse_sq) src/scanner.c (scanner) docs/gnuplot.doc:
	Fixed \' in single-quoted strings.

2005-11-24  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gplt_x11.c: Linked list of color maps separate from the linked
	list for x11 plots. Bugfix for different color palettes in different
	x11 terminal windows and resizing them.

2005-11-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/hidden3d.c (build_networks): Fix handling of previousvertex
	variable for point-like objects, which don't need it.

2005-11-14  Juergen Wieferink  <wieferink@freenet.de>

	* src/set.c (set_xyzlabel): Fix parsing error in backwards-compatible
	form "set xlabel 'foo' -1,-1".

2005-11-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics): Check whether user-specified tic is major